apps/gssp-version-1-1-test02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
  namespace: 
  labels:
    app: 
    backstage.io/component: 
  annotations:
    kubernetes.io/ingress.class: "nginx"                          # shared ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: 
                port:
                  number: 80
